tests/baselines/reference/unionExcessPropertyCheckNoApparentPropTypeMismatchErrors(strict=true).errors.txt
unionExcessPropertyCheckNoApparentPropTypeMismatchErrors.ts(8,18): error TS7010: 'forEach', which lacks return-type annotation, implicitly has an 'any' return type.


==== unionExcessPropertyCheckNoApparentPropTypeMismatchErrors.ts (1 errors) ====
    interface IStringDictionary<V> {
    	[name: string]: V;
    }
    interface INumberDictionary<V> {
    	[idx: number]: V;
    }
    
    declare function forEach<T>(from: IStringDictionary<T> | INumberDictionary<T>, callback: (entry: { key: any; value: T; }, remove: () => void) => any);
                     ~~~~~~~
!!! error TS7010: 'forEach', which lacks return-type annotation, implicitly has an 'any' return type.
    
    let count = 0;
    forEach({ toString: 123 }, () => count++);
    